default/objects/CRUSH_Settings__c/CRUSH_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CRUSH Settings</label>
</CustomObject>