default/objects/CRUSH_Settings__c/fields/Account_Plan_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Transfer__c</fullName>
    <defaultValue>&quot;NONE&quot;</defaultValue>
    <label>Account Plan Transfer</label>
    <length>32</length>
    <type>Text</type>
</CustomField>