default/objects/CRUSH_Settings__c/fields/Account_Plan_Transfer_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Transfer_User__c</fullName>
    <label>Account Plan Transfer User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>