default/objects/CRUSH_Settings__c/fields/Goal_Updated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Goal_Updated_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Goal Updated - Owner</label>
    <type>Checkbox</type>
</CustomField>