default/objects/CRUSH_Settings__c/fields/Goal_Updated_Target__c.field-meta.xml
<CustomField>
    <fullName>Goal_Updated_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Goal Updated - Target</label>
    <type>Checkbox</type>
</CustomField>