default/objects/CRUSH_Settings__c/fields/Key_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Key Date Updated</label>
    <type>Checkbox</type>
</CustomField>