default/objects/CRUSH_Settings__c/fields/Key_Date_Updated_All__c.field-meta.xml
<CustomField>
    <fullName>Key_Date_Updated_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Key Date Updated - All</label>
    <type>Checkbox</type>
</CustomField>