default/objects/CRUSH_Settings__c/fields/Key_Stakeholder_Updated__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholder_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Key Stakeholder Updated</label>
    <type>Checkbox</type>
</CustomField>