default/objects/CRUSH_Settings__c/fields/Objectives_Updated__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objectives Updated</label>
    <type>Checkbox</type>
</CustomField>