default/objects/CRUSH_Settings__c/fields/Objectives_Updated_All__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Updated_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objectives Updated - All</label>
    <type>Checkbox</type>
</CustomField>