default/objects/CRUSH_Settings__c/fields/Objectives_Updated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Updated_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objectives Updated - Owner</label>
    <type>Checkbox</type>
</CustomField>