default/objects/CRUSH_Settings__c/fields/Objectives_Updated_Target__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Updated_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objectives Updated - Target</label>
    <type>Checkbox</type>
</CustomField>