default/objects/CRUSH_Settings__c/fields/Opportunities_Added__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Added__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunities Added</label>
    <type>Checkbox</type>
</CustomField>