default/objects/CRUSH_Settings__c/fields/Opportunities_Added_Target__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Added_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunities Added - Target</label>
    <type>Checkbox</type>
</CustomField>