default/objects/CRUSH_Settings__c/fields/Plan_Overview_Updated_All__c.field-meta.xml
<CustomField>
    <fullName>Plan_Overview_Updated_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Plan Overview Updated - All</label>
    <type>Checkbox</type>
</CustomField>