default/objects/CRUSH_Settings__c/fields/Plan_Overview_Updated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Plan_Overview_Updated_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Plan Overview Updated - Owner</label>
    <type>Checkbox</type>
</CustomField>