default/objects/CRUSH_Settings__c/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status Updated</label>
    <type>Checkbox</type>
</CustomField>