default/objects/CRUSH_Settings__c/fields/Status_Updated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status Updated - Owner</label>
    <type>Checkbox</type>
</CustomField>