default/objects/CRUSH_Settings__c/fields/Status_Updated_Target__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status Updated - Target</label>
    <type>Checkbox</type>
</CustomField>