default/objects/CRUSH_Settings__c/fields/Support_Colors__c.field-meta.xml
<CustomField>
    <fullName>Support_Colors__c</fullName>
    <defaultValue>&quot;Blocker:#FF0000;Supporter:#FFC741;Floater:#E5E1E6;Champion:#97D700;&quot;</defaultValue>
    <label>Support Colors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>