default/objects/CRUSH_Settings__c/fields/SWOT_Analysis_Updated__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Analysis_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SWOT Analysis Updated</label>
    <type>Checkbox</type>
</CustomField>