default/objects/CRUSH_Settings__c/fields/Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Completed</label>
    <type>Checkbox</type>
</CustomField>