default/objects/CRUSH_Settings__c/fields/Task_Completed_All__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Completed - All</label>
    <type>Checkbox</type>
</CustomField>