default/objects/CRUSH_Settings__c/fields/Task_Completed_Target__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Completed - Target</label>
    <type>Checkbox</type>
</CustomField>