default/objects/CRUSH_Settings__c/fields/Task_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Task_Reassigned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Reassigned</label>
    <type>Checkbox</type>
</CustomField>