default/objects/CRUSH_Settings__c/fields/Task_Reassigned_All__c.field-meta.xml
<CustomField>
    <fullName>Task_Reassigned_All__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Reassigned - All</label>
    <type>Checkbox</type>
</CustomField>