default/objects/CRUSH_Settings__c/fields/Task_Reassigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Reassigned_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Reassigned - Owner</label>
    <type>Checkbox</type>
</CustomField>