default/objects/CRUSH_Settings__c/fields/Team_Member_Added_Removed__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Added_Removed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Team Member Added/Removed</label>
    <type>Checkbox</type>
</CustomField>