default/objects/CRUSH_Settings__c/fields/Team_Member_Permission_Updated_Target__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Permission_Updated_Target__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Team Member Permission Updated - Target</label>
    <type>Checkbox</type>
</CustomField>